Adds single player mode.
Adds gameplay mode to achieve a goal score in a set number of turns.
Other tweaks.

 On branch dev
 Changes to be committed:
	modified:   GameApp.py
		PlayerNameScreen
			add_player
				adds check for number of players to direct to correct screen
		GameScreen
			active_game, list_o_players, current_player, list_o_winners ->
				Base
			get_active_game -> Base
			get_active_game_players -> Base
			set_current_player
				adds references to properties now owned by Base
				directly sets ResultsScreen.winners before changing screens
			on_enter
				adds references to properties now owned by Base
			update_round_score -> Base
			update_total_score -> Base
			update_display -> Base
			update_name_display -> Base
			update_total_display -> Base
			update_round_display -> Base
		ResultsScreen
			on_enter
				call to get_winners removed  # Need to remove get_winners
			play_again
				changes screen to MenuScreen
			exit
				closes window
		Roll
			on_press
				changes reference to update_round_score
		Base
			recieves properties active_game, list_o_players, list_o_winners,
				current_player.
			recieves get_active_game, get_active_game_players, update_round_score,
				update_total_score, update_display, update_name_display,
				update_round_display, update_total_display.
			adds update_progress_display
			adds update_solo_total_display
		KeeperBox
			moves adjacent to DieHolder and DieBasket
		DieBasket
			on_keepers
				changes reference to update_display
		Creates SoloGameButton
		Creates SoloPlayerScore
		Creates SoloGameScreen
		Screens
			__init__
				adds SoloGameScreen to screenmanager

	modified:   game.kv
		ScreenManager
			adds SoloGameScreen
		Creates SoloGameButton
		Creates Background@Image to replace repeated text in all screens
		MenuScreen
			Image -> Background@Image
			Button
				changes text
			adds SoloGameButton
		Base
			Image -> Background@Image
			DieBasket
				changes reference to active_game
		Creates SoloPlayerScore
		Crea

--- a/game.kv
+++ b/game.kv
@@ -26,18 +26,26 @@ ScreenManager:
         id: game
         name: 'game'
         manager: 'screen_manager'
+    SoloGameScreen:
+        id: solo
+        name: 'solo'
+        manager: 'screen_manager'
     ResultsScreen:
         id: results
         name: 'results'
         manager: 'screen_manager'
 
+<SoloGameButton>:
+
+<Background@Image>:
+    source: 'images/tabletop4.jpg'
+    allow_stretch: True
+    keep_ratio: False
+
 <MenuScreen>:
     name: 'menu'
     FloatLayout:
-        Image:
-            source: 'images/tabletop4.jpg'
-            allow_stretch: True
-            keep_ratio: False
+        Background:
         Label:
             text: 'Welcome to Ten Thousand!'
             font_size: 35
@@ -51,7 +59,7 @@ ScreenManager:
             size_hint: .2, .1
             pos_hint: {'x': .4, 'y': .55}
         Button:
-            text: 'Let\'s play some dice!'
+            text: 'Play With Friends!'
             color: rgba(colors['text'])
             font_size: 35
             size_hint: .47, .1
@@ -59,14 +67,20 @@ ScreenManager:
             on_press: root.parent.current = 'number'
             background_normal: ''
             background_color: rgba(colors['prime dark'])
+        SoloGameButton:
+            text: 'Solo Challenge!'
+            color: rgba(colors['text'])
+            font_size: 35
+            size_hint: .47, .1
+            pos_hint: {'x': 0.25, 'y': 0.3}
+            background_normal: ''
+            background_color: rgba(colors['prime dark'])
+
 
 <ResultsScreen>:
     name: 'results'
     FloatLayout:
-        Image:
-            source: 'images/tabletop4.jpg'
-            allow_stretch: True
-            keep_ratio: False
+        Background:
         Button:
             text: 'Play again?'
             size_hint: (.15, .05)
@@ -81,10 +95,7 @@ ScreenManager:
 <PlayerNameScreen>:
     name: 'name'
     FloatLayout:
-        Image:
-            source: 'images/tabletop4.jpg'
-            allow_stretch: True
-            keep_ratio: False
+        Background:
 
 <PlayerNumButton@Button>:
     color: rgba(colors['text'])
@@ -99,10 +110,7 @@ ScreenManager:
     FloatLayout:
         buttons: buttons
         id: layout
-        Image:
-            source: 'images/tabletop4.jpg'
-            allow_stretch: True
-            keep_ratio: False
+        Background:
         Label:
             text: 'How many people are playing?\nUp to three can play.'
             halign: 'center'
@@ -235,15 +243,12 @@ ScreenManager:
     die_basket: die_basket
     dice: dice
     buttons: buttons
-    Image:
-        source: 'images/tabletop4.jpg'
-        allow_stretch: True
-        keep_ratio: False
+    Background:
     ScoreArea:
         id: score_area
     DieBasket:
         id: die_basket
-        active_game: root.parent.active_game
+        active_game: root.active_game
     Dice:
         id: dice
     GameButtonRow:
@@ -261,9 +266,35 @@ ScreenManager:
         RulesButton:
             id: rules
 
-
 <GameScreen>:
     name: 'game'
+    base: base
+    Base:
+        id: base
+
+<SoloPlayerScore>:
+    name: name
+    round: round
+    total: total
+    progress: progress
+    PlayerArea:
+        id: name
+        text_size: self.width, None
+        shorten: True
+        shorten_from: 'right'
+        halign: 'center'
+    PlayerArea:
+        id: round
+        halign: 'left'
+    PlayerArea:
+        id: total
+        halign: 'right'
+    PlayerArea:
+        id: progress
+        halign: 'center'
+
+<SoloGameScreen>:
+    name: 'solo'
     base: base
     Base:
         id: base
