Adds single player mode.
Fixes #44

Add ability to choose point goal and turn limits for game, adding interest for
	a single player.

 On branch dev
 Changes to be committed:
	modified:   GameApp.py
		Removes unnecessary imports
		PlayerNumButton
			removes button.one
		GameScreen
			set_current_player
				adds font size to calls to self.base.update_display
				changes alogorythm for finding winner
				add check for tie
				directly sets message for ResultsScreen
		ResultsScreen
			adds StringProperty message
			removes get_winners
			Label text -> self.message
		Base
			update_name_display
				increses big font size
		SoloGameButton
			on_press
				changes destination of next screen
		Adds PointsGoal
		Adds TurnGoal
		Adds SoloGoalScreen
		SoloGameScreen
			Adds NumericProperty point_goal and turn_limit
			set_current_player
				moves incremimenting of self.turn to end of method
				changes alogorythm for finding winner
				directly sets message for ResultsScreen
			on_enter
				adds loop for setting point_goal and turn_limit
				changes text to total_area
				adds text to prog_area
		Screens
			__init__
				adds solo screen
	modified:   game.kv
		ScreenManager
			adds SoloGoalScreen
		PlayerNumberScreen
			removes PlayerNumButton one
		Adds SoloGoalScreen rules

--- a/game.kv
+++ b/game.kv
@@ -26,6 +26,10 @@ ScreenManager:
         id: game
         name: 'game'
         manager: 'screen_manager'
+    SoloGoalScreen:
+        id: goal
+        name: 'goal'
+        manager: 'screen_manger'
     SoloGameScreen:
         id: solo
         name: 'solo'
@@ -119,17 +123,13 @@ ScreenManager:
             size_hint: (.275, .075)
             pos_hint: {'x': .35, 'y': .7}
         BoxLayout:
-            one: one
             two: two
             three: three
             id: buttons
-            size_hint: .8, .2
-            pos_hint: {'x': .1, 'y': .4}
+            size_hint: .5, .2
+            pos_hint: {'x': .25, 'y': .4}
             spacing: 5
             padding: [5]
-            PlayerNumButton:
-                id: one
-                text: 'One'
             PlayerNumButton:
                 id: two
                 text: 'Two'
@@ -271,6 +271,41 @@ ScreenManager:
     base: base
     Base:
         id: base
+
+<SoloGoalScreen>:
+    name: 'goal'
+    goals: goals
+    Background:
+    BoxLayout:
+        id: goals
+        points: points
+        turns: turns
+        diff: diff
+        size_hint: .95, .1
+        pos_hint: {'x': .025, 'y': .2}
+        padding: [5]
+        spacing: 5
+        Label:
+            id: points
+            font_size: 30
+            halign: 'left'
+            text: 'Points goal:'
+        Label
+            id: turns
+            font_size: 30
+            text: 'Turn limit:'
+        Label
+            id: diff
+            font_size: 30
+            text: 'Difficulty level:'
+    Button:
+        size_hint: .2, .1
+        pos_hint: {'x': .4, 'y': .05}
+        text: 'Continue'
+        font_size: 30
+        background_normal: ''
+        background_color: rgba(colors['second dark'])
+        on_release: root.parent.current = 'name'
 
 <SoloPlayerScore>:
     name: name
