--- a/game.kv
+++ b/game.kv
@@ -101,7 +101,7 @@ ScreenManager:
     FloatLayout:
         Background:
 
-<PlayerNumButton@Button>:
+<PlayerNumButton>:
     color: rgba(colors['text'])
     font_size: 50
     halign: 'center'
