--- a/game.kv
+++ b/game.kv
@@ -45,6 +45,8 @@ ScreenManager:
 
 <MyOwnSelfButton>:
 
+<BackButton>:
+
 <Background@Image>:
     source: 'images/tabletop4.jpg'
     allow_stretch: True
@@ -112,7 +114,6 @@ ScreenManager:
         size_hint: .5, .1
         pos_hint: {'x': .25, 'y': .1}
 
-
 <ResultsScreen>:
     name: 'results'
     Background:
@@ -135,6 +136,8 @@ ScreenManager:
 <PlayerNameScreen>:
     name: 'name'
     Background:
+    BackButton:
+        on_release: root.to_prev_screen()
 
 <PlayerNumButton>:
     color: rgba(colors['text'])
@@ -171,6 +174,8 @@ ScreenManager:
         background_color: rgba(colors['second dark'])
         on_release: root.parent.current = 'name'
         disabled: True
+    BackButton:
+        on_release: root.to_menu_screen()
 
 <DieHolder>:
 
@@ -388,6 +393,8 @@ ScreenManager:
         background_color: rgba(colors['second dark'])
         on_release: root.parent.current = 'name'
         disabled: True
+    BackButton:
+        on_release: root.to_menu_screen()
 
 <SoloPlayerScore>:
     name: name
